<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/simpleEditText"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:text="Text" /><!--set text in edit text-->

    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"/>

    <Button
        android:id="@+id/recognize_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_file"/>

    <Button
        android:id="@+id/recognize_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_microphone"/>

    <ToggleButton
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/pause"
        android:textOn="@string/continueRecognition"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/title_translation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/translationBelow"/>





</LinearLayout>
